# hson

./: LICENSE  OldValidator.txt  README.md  dogfile.json  hie.yaml  hson.cabal  project-cis5520.cabal  runbook.txt  schoolfile.json
app/: Main.hs
dist-newstyle/cache/: compiler  config
src/: FromJSON.hs  FromJSONSchema.hs  HSON.hs  HSONParser.hs  HSONQuickCheck.hs  HSONSchema.hs  HSONValidator.hs  Parser.hs  ToHSONSchema.hs  ToJSON.hs  ValidateHSON.hs
test/: FromJSONSchemaTest.hs  FromJSONTest.hs  HSONSchemaTest.hs  HSONTest.hs  HSONValidatorTest.hs  Spec.hs  ToHSONSchemaTest.hs  ToJSONTest.hs  ValidateHSONTest.hs
test/json-schema/object/: address-object.json  card-object.json  coordinate-object.json  emma0.json  emma1.json  emma2.json  emma3.json  emma4.json  emma5.json  emma6.json  emma7.json
test/json-schema/schema/: address-schema.json  card-schema.json  cis-5520-staff-schema.json  coordinate-schema.json  test.json
test/json/invalid/: boolean.txt  comma.txt  coordinate-schema-bad.json  number.txt
test/json/test/: array.json
test/json/valid/: array.json  dog.json  school.json
